--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@gauseen/nuxt-proxy": "^1.0.1",
     "axios": "^0.19.2",
+    "element-ui": "^2.13.2",
     "jquery": "^3.5.1",
     "nuxt": "^2.13.0"
   },
   "devDependencies": {
     "node-sass": "^4.14.1",
-    "sass-loader": "^9.0.3"
+    "sass-loader": "^9.0.3",
+    "vue-concise-slider": "^3.4.4"
   }
 }
